force-app/main/default/objects/Guias_Exportacion_Despacho__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <formula>Guias_de_Exportacion__r.Contacto_Destinatario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>