force-app/main/default/objects/Guias_Exportacion_Despacho__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <formula>Guias_de_Exportacion__r.Calle__c&amp;&quot; &quot;&amp;Guias_de_Exportacion__r.Ciudad__c&amp;&quot; &quot;&amp;Guias_de_Exportacion__r.Pais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>