force-app/main/default/objects/Guias_Exportacion_Despacho__c/fields/Guias_de_Exportacion__c.field-meta.xml
<CustomField>
    <fullName>Guias_de_Exportacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guías Nacionales/Carga</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Guias_de_Exportacion__c.Agente__c</field>
            <operation>equals</operation>
            <value>Nacional, Servicio Carga</value>
        </filterItems>
        <filterItems>
            <field>Guias_de_Exportacion__c.Estado__c</field>
            <operation>equals</operation>
            <value>Despachado</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Guias_de_Exportacion__c</referenceTo>
    <relationshipLabel>Ruta</relationshipLabel>
    <relationshipName>Guias_Exportacion_Despacho</relationshipName>
    <type>Lookup</type>
</CustomField>