force-app/main/default/objects/Guias_Exportacion_Despacho__c/fields/Hora_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Hora_Entrega__c</fullName>
    <label>Fecha/Hora Entrega</label>
    <type>DateTime</type>
</CustomField>