force-app/main/default/objects/Guias_Exportacion_Despacho__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <formula>Guias_de_Exportacion__r.Peso_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>