force-app/main/default/objects/Guias_Exportacion_Despacho__c/fields/Piezas__c.field-meta.xml
<CustomField>
    <fullName>Piezas__c</fullName>
    <formula>Guias_de_Exportacion__r.Paquetes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Piezas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>