force-app/main/default/objects/Guias_Exportacion_Despacho__c/fields/Ruta__c.field-meta.xml
<CustomField>
    <fullName>Ruta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ruta</label>
    <referenceTo>Ruta__c</referenceTo>
    <relationshipLabel>Guía Nacional/Carga Despacho</relationshipLabel>
    <relationshipName>Guias_Exportacion_Despacho</relationshipName>
    <type>Lookup</type>
</CustomField>