force-app/main/default/objects/Guias_Exportacion_Despacho__c/validationRules/Confirma_Agente_Nacional_carga.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirma_Agente_Nacional_carga</fullName>
    <active>false</active>
    <errorConditionFormula>if
(
or ( text(Guias_de_Exportacion__r.Agente__c ) &lt;&gt; &apos;Servicio Carga&apos;,
text (Guias_de_Exportacion__r.Agente__c ) &lt;&gt; &apos;Nacional&apos;),true,false)</errorConditionFormula>
    <errorMessage>Solo puede añadir guías nacionales o de carga</errorMessage>
</ValidationRule>